# code-agent-test

./: .env.example  Cargo.toml  README.md  fibonacci.py
.github/automation/: ci.yml
.github/workflows/: ci.yml  rust-ci.yml
api_rust/src/: config.rs
config/: default.toml
fibonacci/src/: main.rs
fibonacci_demo/src/: main.rs
projects/fibonacci-rust-demo/src/: main.rs
projects/fibonacci/fibonacci_demo/src/: main.rs
src/: config.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs
tests/: integration_tests.rs
