[package]
name = "api_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.x"
tokio = { version = "1.x", features = ["full"] }
serde = { version = "1.x", features = ["derive"] }
serde_json = "1.x"
env_logger = "0.10.x"
log = "0.4.x"
dotenv = "0.15.x"
config = "0.13.3"

[dev-dependencies]
actix-rt = "2.8.0"
reqwest = { version = "0.11.18", features = ["json"] }
tokio-test = "0.4.2"