[package]
name = "api_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
config = "0.13.3"

[dev-dependencies]
actix-rt = "2.8.0"
reqwest = { version = "0.11.18", features = ["json"] }
tokio-test = "0.4.2"