[package]
name = "rust-hello-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.x"
tokio = { version = "1.x", features = ["full"] }
serde = { version = "1.x", features = ["derive"] }
serde_json = "1.x"
env_logger = "0.10.x"
log = "0.4.x"
dotenv = "0.15.x"
config = "0.13.x"
mime = "0.3.x"

[dev-dependencies]
actix-rt = "2.8.x"
reqwest = { version = "0.11.x", features = ["json"] }
tokio-test = "0.4.x"